--- a/style.css
+++ b/style.css
@@ -9,5 +9,61 @@
     }
     body {
         font-family:'Poppins', sans-serif;
+        background-color: rgb(0, 255, 242);
+        cursor: url('github.png'), auto;
     }
 
+    html {
+        scroll-behavior: smooth;
+    }
+    p{
+        color:rgb(85, 85, 85);
+    }
+
+    /* Transition */
+
+a, 
+.button {
+    transition: all 300ms ease;
+}
+
+/* Desktop Nav*/
+
+nav, 
+.nav-links {
+    display: flex;
+}
+
+nav {
+    justify-content: space-around;
+    align-items: center;
+    height: 17vh;
+}
+
+.nav-links{
+    gap: 2rem;
+    list-style: none;
+    font-size: w.5rem;
+
+}
+/* targets the color of the anchor links */
+
+a {
+    color:black);
+    text-decoration: none;
+    text-decoration-color: white;
+}
+/* tagerts the hover color effect of the anchor links */
+a:hover {
+    color:yellow;
+    text-decoration: underline;
+    text-underline-offset: 1rem;
+    text-decoration-color:rgb(181, 181, 181);
+
+}
+.logo {
+    font-size: 2rem;
+}
+.logo:hover {
+    cursor:
+}
