--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ nav {
 /* targets the color of the anchor links */
 
 a {
-    color:black);
+    color:black;
     text-decoration: none;
     text-decoration-color: white;
 }
@@ -87,4 +87,24 @@ a:hover {
     height: 24px;
     width: 30px;
     cursor: pointer;
+}
+
+.hamburger-icon span {
+    width:100px;
+    height: 2px;
+    background-color: black;
+    transition: all 0.3 ease-in-out;
+    
+}
+
+.menu-links {
+    position: absolute;
+    top: 100%;
+    right: 0%;
+    background-color: white;
+    width: fit-content;
+    max-height: 0;
+    overflow: hidden;
+    transition: all 0.3 ease-in-out;
+     
 }
